lab1/Test/L1-A-10-79.output
Error Type B at Line 1
Error Type B at Line 4
Error Type B at Line 6
Error Type A at Line 13
Error Type B at Line 20
Error Type A at Line 30
Error Type A at Line 33
Error Type B at Line 34
