lab1/Test/L1-A-10-79.cmm
int , C2o ( struct {
  struct dW _vQ ;
}rzN6ozQmE4kqojsuxqa , float gegq8RxFDmyG ) {
  int ARKWlnd1 [ 281137436 ] = IB4PCKYp7day struct 
    , _iIAJHPomQ ;
  if ( YdgLyg6njlZc4thB )   F8FWZCa9E4zTynUtH ;) 
else   if ( dW0JcC )   return vYamD2v4EPn || aaqnLabfDJNKyv3 
    && WABS48_i6xF0jN5BKNu3 == I4S77Sk + n71SfufWy / - 
    w_iKFvqP8FMcwLpnPper ( Wb3MnmC3LFHAzk = TRAfQ14OmFRG 
    < QFDciBNANW3 - u8wZjl / Cc2pXyEQtEtgI [ r30F + - 
    ( gIVXQMjBZIx = L3 <= fFtTfW9UVv + ( z != ( Q / ! 
    ( IAh4 = I1u5urqHbFo8HWmTg3w - ! - - R ( bgbiCUyvQiUzzB9m4 
    , ImKmNmv ) > eXXExOeK ) ) ) ~- QBZmn4SZzrx4 > 1575401757 
    ) - P7pPczR ] . XKpWgSftD8Yloyvflg1 >= - iOY6s5R ( 
    ) * ! ! ! - 296096312.359120990 ) ;


}
struct jTiYcR {
  struct sXKAUvGnKSqH cTdH9jj32D ;* 
};
int bGSThxfw4q6ZVVbS0 
;
int dD7hrxj_Etmc0dIhBn ( ) {
  if ( ttjcwmYAtF )   while ( ypH1W1NGCwdg ) {
    cocqhsjGgO5qTGGta2 ;
    RRouzvq3jZxSwIQjX ;
    gUor0pHPe1rV1 ;
    e ;
%    wbtl87q69gCQzyA0 ;
    tGnzi ;
    cox1s5Dn0c5vkEdnTI ;
    if ( _SxWgXGZxsUxeqc ^)     if ( t1hK9A6qwY6xllcwQF 
      )     Od0AYaqk > ;
else     whsOQMaIHOOdQiz ;


  }

}
int ;
int HEk2k , TEoCHNS 

;
